Layout Bug in Admin Subnav

--- a/client/src/assets/less/navbar.less
+++ b/client/src/assets/less/navbar.less
@@ -182,8 +182,8 @@ ul.uk-nav-primary {
     &:before {
       content: "";
       position: absolute;
-      top: -10px;
-      bottom: -10px;
+      top: -12px;
+      bottom: -12px;
       left: -10px;
       right: -20px;
       background: linear-gradient(to right, rgba(255, 255, 255, 1) 60%, rgba(255, 255, 255, 0) 100%);
@@ -197,8 +197,8 @@ ul.uk-nav-primary {
     &:after {
       content: "";
       position: absolute;
-      top: -10px;
-      bottom: -10px;
+      top: -12px;
+      bottom: -12px;
       left: -20px;
       right: -10px;
       background: linear-gradient(to left, rgba(255, 255, 255, 1) 60%, rgba(255, 255, 255, 0) 100%);
